still debugging 500 errors

--- a/templates/party.html
+++ b/templates/party.html
@@ -55,7 +55,7 @@
 
     {% if guest_mode %}
     <div class="alert alert-warning text-center">
-      🧙 You’re currently exploring as a <strong>guest</strong>. Log in or sign up to join or manage parties.
+      🧙 You're currently exploring as a <strong>guest</strong>. Log in or sign up to join or manage parties.
       <a href="{% url 'signup_login' %}" class="btn btn-sm btn-gold ms-2">Sign Up / Log In</a>
     </div>
     {% endif %}
