--- a/templates/characters.html
+++ b/templates/characters.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <!-- Navbar (unchanged) -->
+  <!-- Navbar -->
   {% include 'navbar.html' %}
 
   <div class="container mt-5">
@@ -72,7 +72,7 @@
             <!-- Attributes -->
             <div class="tab-pane fade" id="attributes" role="tabpanel">
               <div class="row">
-                {% for attr in "Strength,Dexterity,Constitution,Intelligence,Wisdom,Charisma"|split:"," %}
+                {% for attr in attributes %}
                 <div class="col-md-4 mb-3">
                   <label class="form-label">{{ attr }}</label>
                   <input type="number" name="{{ attr|lower }}" class="form-control" min="1" max="20" value="10">
