playing around with colour variants

--- a/templates/characters.html
+++ b/templates/characters.html
@@ -133,7 +133,7 @@
     <hr class="mt-5 mb-4">
     <h2>Your Characters</h2>
     {% if characters %}
-    <div class="row">
+    <div class="row" .character-sheet>
       {% for c in characters %}
       <div class="col-md-4 mb-3">
         <div class="card bg-dark text-light">
