--- a/templates/signup_login.html
+++ b/templates/signup_login.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <style>
-    body { background-color: #1a1a1a; color: #fff; }
+    body { background-color: rgb(122, 88, 0); color: #c7bb95; }
     .form-text, .invalid-feedback { color: #ffcccb; }
     .valid-feedback { color: #90ee90; }
     .bg-secondary { background-color: rgba(69, 64, 61, 0.8) !important; }
